<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ForgetPassword"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/playfair_display_bold"
        android:padding="10dp"
        android:text="@string/forget_password_title"
        android:textColor="@color/darkBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="212dp"
        android:foreground="@drawable/corner"
        android:textColorHint="@color/darkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forget"
        app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

        <EditText
            android:id="@+id/ed_phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="textEmailAddress"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/blue" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_sendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_verify_code"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/layout_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="212dp"
        android:foreground="@drawable/corner"
        android:textColorHint="@color/darkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sendCode"
        app:startIconDrawable="@drawable/ic_baseline_verified_24">

        <EditText
            android:id="@+id/ed_codenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verify_code"
            android:inputType="textEmailAddress"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/blue" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_verifycode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_verify_code"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/layout_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>